docs: finalize admin guide for current beta